k8s/ingress/traefik/mirror-traffic/svc01.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc01
spec:
  ports:
  - name: web
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: v1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: v1
  labels:
    app: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v1
  template:
    metadata:
      labels:
        app: v1
    spec:
      containers:
      - name: v1
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: web
