k8s/ingress/traefik/mirror-traffic/svc02.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc02
spec:
  selector:
    app: v2
  type: ClusterIP
  ports:
  - name: v2
    port: 80
    targetPort: 80
    protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v2
  template:
    metadata:
      labels:
        app: v2
    spec:
      containers:
      - name: v2
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 80
