k8s/ingress/traefik/mirror-traffic/mirror-ingress-route.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mirror-traffic-ingressroute
spec:
  endPoints:
  - web
  routes:
  - match: Host(`mirror.zjqi.top`)
    kind: Rule
    services:
    - kind: TraefikService
      name: mirror-traefiksvc
